@@ -505,19 +505,19 @@
 
 -(void) onEnter
 {
-	isRunning = YES;
-	
 	for( id child in children )
 		[child onEnter];
 	
 	[self activateTimers];
+
+	isRunning = YES;
 }
 
 -(void) onExit
 {
-	isRunning = NO;
-	
 	[self deactivateTimers];
+
+	isRunning = NO;	
 	
 	for( id child in children )
 		[child onExit];
